--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,12 +47,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    def room_version = "2.3.0"
-
-    implementation("androidx.room:room-runtime:$room_version")
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-
-    kapt("androidx.room:room-compiler:$room_version")
-
-    implementation("androidx.room:room-ktx:$room_version")
+    implementation "io.coil-kt:coil:1.2.2"
+    implementation("io.coil-kt:coil-gif:2.1.0")
+    implementation("io.coil-kt:coil:2.0.0-rc02")
+    implementation "io.coil-kt:coil-gif:2.0.0-rc02"
+    implementation("io.coil-kt:coil-compose:2.0.0-rc02")
 }
